--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,23 @@
             <artifactId>junit-jupiter</artifactId>
             <version>5.11.0-M1</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>7.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
+
 
 </project>
 
